// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Image component with a custom url of a custom size 1`] = `
<img
  src="url"
  style={
    Object {
      "height": "100px",
      "width": "200px",
    }
  }
  unselectable="on"
/>
`;

exports[`Image Image component with a custom url of a preset size 1`] = `
<img
  alt="alt text"
  src="url"
  unselectable="on"
/>
`;

exports[`Image Image component with height only 1`] = `
<img
  src="url"
  style={
    Object {
      "height": "100px",
    }
  }
  unselectable="on"
/>
`;

exports[`Image Image component with width only 1`] = `
<img
  src="url"
  style={
    Object {
      "width": "100px",
    }
  }
  unselectable="on"
/>
`;

exports[`Image Image component without error 1`] = `
<div
  className="img-placeholder"
/>
`;
